src/objects/LAC_Coffee_CKW__c.object
<CustomObject>
    <fields>
        <fullName>CKW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CKW</label>
        <referenceTo>CKW__c</referenceTo>
        <relationshipLabel>LAC_Coffee_CKWs_CKW</relationshipLabel>
        <relationshipName>LAC_Coffee_CKWs_CKW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAC_Farmer_Details__c</fullName>
        <label>LAC Farmer Details</label>
        <referenceTo>LAC_Farmer_Details__c</referenceTo>
        <relationshipLabel>LAC_Coffee_CKWs_LFD</relationshipLabel>
        <relationshipName>LAC_Coffee_CKWs_LFD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(CKW__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assignedFarmers__c</fullName>
        <formula>CKW__r.Assigned_Farmer_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>assignedFarmers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>birthDate__c</fullName>
        <formula>contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>birthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cKWPerformance__c</fullName>
        <formula>CKW__r.Current_Performance_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cKWPerformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cellPhoneNumber__c</fullName>
        <formula>LAC_Farmer_Details__r.Cell_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cellPhoneNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>communitiesServed__c</fullName>
        <label>communitiesServed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>community__c</fullName>
        <formula>LAC_Farmer_Details__r.District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LAC_Coffee_CKWs_Contact</relationshipLabel>
        <relationshipName>LAC_Coffee_CKWs_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cooperative__c</fullName>
        <formula>LAC_Farmer_Details__r.Cooperative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cooperative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <formula>LAC_Farmer_Details__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateEnrollmentAsCKW__c</fullName>
        <formula>CKW__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dateEnrollmentAsCKW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateOfEnrollment__c</fullName>
        <formula>LAC_Farmer_Details__r.Entrance_Into_Programme__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dateOfEnrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <formula>LAC_Farmer_Details__r.Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>farmerCode__c</fullName>
        <formula>LAC_Farmer_Details__r.Farmer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>farmerCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <formula>LAC_Farmer_Details__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>firstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <formula>TEXT(LAC_Farmer_Details__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasCellPhone__c</fullName>
        <formula>TEXT(LAC_Farmer_Details__r.Has_Cellphone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hasCellPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasDataPlan__c</fullName>
        <formula>TEXT(LAC_Farmer_Details__r.Has_Data_Plan__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hasDataPlan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <formula>LAC_Farmer_Details__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>municipalitiesServed__c</fullName>
        <label>municipalitiesServed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>municipality__c</fullName>
        <formula>LAC_Farmer_Details__r.Municipality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>municipality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nationalId__c</fullName>
        <formula>contact__r.gfsurveys__mobilesurveys_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>nationalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>photo__c</fullName>
        <formula>LAC_Farmer_Details__r.Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>photo</label>
        <type>Text</type>
    </fields>
    <label>LAC_Coffee_CKW</label>
    <nameField>
        <label>LAC_Coffee_CKW Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAC_Coffee_CKWs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>